--- a/src/main/resources/db/db.properties
+++ b/src/main/resources/db/db.properties
@@ -1,6 +1,6 @@
-database.url="jdbc:postgresql://localhost:5432/noteManager"
-database.login="user"
-database.password="password"
+database.url=jdbc:postgresql://localhost:5432/noteManager
+database.login=user
+database.password=password
 
 database.init=true
 
